manifests/istio/workloadentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: dubbo-app-se
spec:
  hosts:
    - mosn.io.dubbo.DemoService.workload
  ports:
    - number: 20882
      name: dubbo-http
      protocol: HTTP
  location: MESH_INTERNAL
  resolution: STATIC
  workloadSelector:
    labels:
      app: mosn.io.dubbo.DemoService.workload

###############################
# proxy define
###############################

---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dubbo-proxy
spec:
  hosts:
    - mosn.io.dubbo.proxy
  ports:
    - number: 20882
      name: proxy
      protocol: TCP
  location: MESH_INTERNAL
  resolution: STATIC
  workloadSelector:
    labels:
      app: mosn.io.dubbo.proxy
